--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Private ###
 /src/main/resources/application.properties
+/src/main/resources/certs/private.pem
+/src/main/resources/certs/public.pem
 
 ### STS ###
 .apt_generated
